@@ -1022,7 +1022,7 @@ static const canon_mode_t canon_PIXMA_iP2700_modes[] = {
   /* draft modes -- B/W also */
   {  300, 300,CANON_INK_K|CANON_INK_CMYK,"300x300dpi",N_("300x300 DPI"),INKSET(13_C2M2Y2K2),8,MODE_FLAG_EXTENDED_T|MODE_FLAG_IP8500,NULL,1.0,1.0,NULL,NULL,NULL,1},
 };
-DECLARE_MODES(canon_PIXMA_iP2700,13);
+DECLARE_MODES(canon_PIXMA_iP2700,0);
 
 /* Gernot: added modes for iP4500.
    I noticed that the monochrome modes use all inks but only K is sent in the printjob,
@@ -1474,6 +1474,30 @@ static const canon_mode_t canon_PIXMA_iP8500_modes[] = {
   {  600, 600,CANON_INK_CMYK,"600x600dpi_draft3",N_("600x600 DPI DRAFT OHP"),INKSET(11_C6M6Y6K6_c),16,MODE_FLAG_EXTENDED_T,NULL,1.0,1.0,NULL,NULL,NULL,1},
 };
 DECLARE_MODES(canon_PIXMA_iP8500,3);
+
+static const canon_mode_t canon_PIXMA_MG2100_modes[] = {
+  /* high mode -- B/W also */
+  {  600, 600,CANON_INK_K|CANON_INK_CMYK,"600x600dpi_high",N_("600x600 DPI HIGH"),INKSET(13_C4M4Y3K4),8,MODE_FLAG_EXTENDED_T,NULL,1.0,1.0,NULL,NULL,NULL,3},
+  /* Env mode */
+  {  600, 600,CANON_INK_K|CANON_INK_CMYK,"600x600dpi_high2",N_("600x600 DPI HIGH (Env/Hagaki)"),INKSET(13_C3M3Y2K3),8,MODE_FLAG_EXTENDED_T,NULL,1.0,1.0,NULL,NULL,NULL,3},
+  /* standard mode -- B/W also */
+  {  600, 600,CANON_INK_K|CANON_INK_CMYK,"600x600dpi",N_("600x600 DPI"),INKSET(13_C3M3Y2K3),8,MODE_FLAG_EXTENDED_T,NULL,1.0,1.0,NULL,NULL,NULL,2},
+  /* draft mode -- B/W also */
+  {  300, 300,CANON_INK_CMY,"300x300dpi",N_("300x300 DPI"),INKSET(13_C2M2Y2K2),8,MODE_FLAG_EXTENDED_T|MODE_FLAG_IP8500,NULL,1.0,1.0,NULL,NULL,NULL,1},
+  /* Photo modes */
+  {  600, 600,CANON_INK_CMY,"600x600dpi_photohigh",N_("600x600 DPI PHOTO HIGH"),INKSET(13_C4M4Y4),8,MODE_FLAG_EXTENDED_T,NULL,1.0,1.0,NULL,NULL,NULL,3},
+  {  600, 600,CANON_INK_CMY,"600x600dpi_photo",N_("600x600 DPI PHOTO"),INKSET(13_C4M4Y4),8,MODE_FLAG_EXTENDED_T,NULL,1.0,1.0,NULL,NULL,NULL,2},
+  /* Std mode using only color cartridge */
+  {  600, 600,CANON_INK_CMY,"600x600dpi_high3",N_("600x600 DPI HIGH (Color-only)"),INKSET(13_C3M3Y2K3off),8,MODE_FLAG_EXTENDED_T,NULL,1.0,1.0,NULL,NULL,NULL,3},
+  {  600, 600,CANON_INK_CMY,"600x600dpi_std2",N_("600x600 DPI STANDARD (Color-only)"),INKSET(13_C3M3Y2K3off),8,MODE_FLAG_EXTENDED_T,NULL,1.0,1.0,NULL,NULL,NULL,2},
+  {  300, 300,CANON_INK_CMY,"300x300dpi_std2",N_("300x300 DPI (Color-only)"),INKSET(13_C2M2Y2K2off),8,MODE_FLAG_EXTENDED_T|MODE_FLAG_IP8500,NULL,1.0,1.0,NULL,NULL,NULL,1},
+  /* B/W modes */
+  {  600, 600,CANON_INK_K,"600x600dpi_highmono",N_("600x600 DPI HIGH (Black-only)"),INKSET(13_C4M4Y3K4),8,MODE_FLAG_EXTENDED_T,NULL,1.0,1.0,NULL,NULL,NULL,3},
+  {  600, 600,CANON_INK_K,"600x600dpi_mono",N_("600x600 DPI HIGH Env/Hagaki (Back-only)"),INKSET(13_C3M3Y2K3),8,MODE_FLAG_EXTENDED_T,NULL,1.0,1.0,NULL,NULL,NULL,3},
+  {  600, 600,CANON_INK_K,"600x600dpi_mono",N_("600x600 DPI (Back-only)"),INKSET(13_C3M3Y2K3),8,MODE_FLAG_EXTENDED_T,NULL,1.0,1.0,NULL,NULL,NULL,2},
+  {  300, 300,CANON_INK_K,"300x300dpi_mono",N_("300x300 DPI (Black-only)"),INKSET(13_C2M2Y2K2),8,MODE_FLAG_EXTENDED_T|MODE_FLAG_IP8500,NULL,1.0,1.0,NULL,NULL,NULL,1},
+};
+DECLARE_MODES(canon_PIXMA_MG2100,0);
 
 static const canon_mode_t canon_PIXMA_MG5100_modes[] = {
   /* high mode -- B/W also */
